[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ld-audit"
version = "0.1.0"
description = "CLI tool to audit LaunchDarkly feature flags"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Cesar Daniel Perez"},
]
keywords = ["launchdarkly", "feature-flags", "audit", "cli", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.20.0",
    "rich>=14.2.0",
    "requests>=2.32.3",
    "python-dotenv>=1.2.1",
    "platformdirs>=4.5.0",
]

[project.scripts]
ldaudit = "ld_audit.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/launchdarkly-audit"
Repository = "https://github.com/yourusername/launchdarkly-audit"
Issues = "https://github.com/yourusername/launchdarkly-audit/issues"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/ld_audit"]
